<resources>
    <string name="app_name">Fatima Hifzul Quran</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="nazera">Nazera</string>
    <string name="hifz">Hifz</string>
    <string name="computer_section">Select Computer Section</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="isEnglishStudent">Is English Student ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noorani">Noorani</string>
    <string name="action_age">Filter By Age</string>
    <string name="action_name">Filter By Joining Date</string>
    <string name="action_english_class">Filter By English Class</string>
    <string name="ageWithYear">%d years</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="computer_test_notification_channel_id">computer_test_channels</string>
    <string name="notification_title">Time\'s Up</string>
    <string name="computer_test_notification_channel_description">Computer Test Time up</string>
    <string name="channel_id">computer_test_channel</string>
    <string name="channel_name">Computer Test</string>
    <string name="timer_prompt">Set Timer</string>
    <string name="test_notification">This is a ttest notification.</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="tests">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="joining_date">Joining Date</string>
    <string name="grad_date">Graduation Date</string>
    <string name="title_section_action">Select Computer Section</string>
    <string name="positive">ACCEPT</string>
    <string name="negative">DECLINE</string>
</resources>