<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="neel.com.fatimahifzulquran.viewModel.StudentViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/iv_student"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:onClick="@{() -> viewModel.onProfileImageClick()}"
            app:crudImageUrl="@{viewModel._studentImage }"
            tools:src="@drawable/ic_profile"
            android:adjustViewBounds="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Student Name"

            >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel._studentName}"
            app:errorEnabled="true"
             />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_father_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Father Name"
            app:layout_constraintBottom_toTopOf="@+id/et_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.studentFatherName}"
                app:errorEnabled="true"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/tv_classs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_father_name" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel._studentAge}"
                app:errorEnabled="true"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_classs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Education Type"
            android:textColor="@color/purple_700"
            android:paddingTop="@dimen/spacing_small"
             />

        <RadioGroup
            android:id="@+id/rg_edu_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/rb_nazera"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_classs">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_nazera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nazera"
                android:onClick="@{viewModel.onEduTypeRbClick}"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_hifz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hifz"
                android:onClick="@{viewModel.onEduTypeRbClick}"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_noorani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noorani"
                android:onClick="@{viewModel.onEduTypeRbClick}"
                />


        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_chapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Current Quran Chapter"
            android:inputType="number"
            android:visibility="@{viewModel.isHifzStudent? View.VISIBLE:View.GONE}"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel._studentAge}"
                app:errorEnabled="true"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_section"
            android:textColor="@color/purple_700" />


        <RadioGroup
            android:id="@+id/rg_computer_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/rb_cs_a"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_cs_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A"
                android:onClick="@{viewModel.onComputerSectionRbClick}"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_cs_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/B"
                android:onClick="@{viewModel.onComputerSectionRbClick}"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_cs_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C"
                android:onClick="@{viewModel.onComputerSectionRbClick}"
                />


        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isEnglishStudent"
            android:textColor="@color/purple_700" />

        <RadioGroup
            android:id="@+id/appCompatCheckedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:orientation="horizontal"
            android:checkedButton="@id/rb_es_yes"
            app:layout_constraintBottom_toTopOf="@+id/et_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" >

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_es_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:onClick="@{viewModel.onEnglishStudentTypeClick}"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_es_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:onClick="@{viewModel.onEnglishStudentTypeClick}"
                />


        </RadioGroup>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            app:layout_constraintBottom_toTopOf="@+id/et_joining_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatCheckedTextView" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.address}"
                app:errorEnabled="true"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tiet_joining_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel._studentJoiningDate}"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                app:errorEnabled="true"
                android:layout_weight="1"
                android:padding="@dimen/spacing_normal"
                tools:text="@string/joining_date"
                app:drawableTint="@color/teal_200"
                android:onClick="@{()->viewModel.onJoiningDateClick()}"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel._studentFinshingDate}"
                android:inputType="date"
                app:errorEnabled="true"
                android:padding="@dimen/spacing_normal"
                android:layout_weight="1"
                tools:text="@string/grad_date"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                app:drawableTint="@color/teal_200"
                />
            

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Emergency Contact Number"
            app:layout_constraintBottom_toTopOf="@+id/et_ambition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_finishing_date" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.emergencyContactNumber}"
                app:errorEnabled="true"
                android:inputType="phone"
                />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_ambition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ambition"
            app:layout_constraintBottom_toTopOf="@+id/et_hobbies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_contact_number" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.ambition}"
                app:errorEnabled="true"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hobbies"
            app:layout_constraintBottom_toTopOf="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.hobbies}"
                app:errorEnabled="true"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.addNewStudent()}"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_student"
            />



    </LinearLayout>
    </ScrollView>

</layout>