<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="neel.com.fatimahifzulquran.viewModel.UpdateStudentInfoViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <ImageView
                android:id="@+id/iv_student"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:onClick="@{() -> viewModel.onProfileImageClick()}"
                app:imageUrl="@{viewModel.studentImage }"
                app:layout_constraintBottom_toTopOf="@+id/cly"
                app:layout_constraintDimensionRatio="H,2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:src="@drawable/ic_profile" />

            <LinearLayout
                android:id="@+id/cly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_student">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Student Name"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.studentName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_father_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Father Name"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.studentFatherName}" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    android:inputType="number"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewModel.studentAge}" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_classs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Education Type"
                    />

                <RadioGroup
                    android:id="@+id/rg_edu_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rb_nazera"
                    android:orientation="horizontal"
                    >

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_nazera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onEduTypeRbClick}"
                        android:text="@string/nazera" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_hifz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onEduTypeRbClick}"
                        android:text="@string/hifz" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_noorani"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onEduTypeRbClick}"
                        android:text="@string/noorani" />


                </RadioGroup>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/computer_section"
                     />


                <RadioGroup
                    android:id="@+id/rg_computer_section"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rb_cs_a"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/et_ambition"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:layout_editor_absoluteX="16dp">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_cs_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onComputerSectionRbClick}"
                        android:text="@string/A" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_cs_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onComputerSectionRbClick}"
                        android:text="@string/B" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_cs_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onComputerSectionRbClick}"
                        android:text="@string/C" />


                </RadioGroup>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isEnglishStudent"
                     />

                <RadioGroup
                    android:id="@+id/appCompatCheckedTextView"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rb_es_yes"
                    android:orientation="horizontal"
                    android:text="@string/yes"
                    app:layout_constraintBottom_toTopOf="@+id/et_address"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:layout_editor_absoluteX="16dp">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_es_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onEnglishStudentTypeClick}"
                        android:text="@string/yes" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_es_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onEnglishStudentTypeClick}"
                        android:text="@string/no" />


                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Address"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.studentAddress}" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_joining_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Joining Date"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:inputType="date"
                        android:onClick="@{()->viewModel.onJoiningDateClick()}"
                        android:text="@={viewModel.joiningDate}" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_finishing_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Finishing Date"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:text="@={viewModel.finishingDate}" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Emergency Contact Number"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewModel.emergencyContactNumber}" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_ambition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ambition"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.ambition}" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_hobbies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Hobbies"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.hobbies}" />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.updateStudentInfo()}"
                    android:text="@string/update"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_finishing_date"
                    tools:layout_editor_absoluteX="307dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>